--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,18 +5,21 @@ body {
 
 .secondBackground {
     background-image: linear-gradient(to bottom right, #030712 1%, transparent 99%, #030712 100%);
+    z-index: -1;
 }
 
 .navBehavior {
     position: sticky;
     top: 0px;
     backdrop-filter: blur(16px);
-    z-index: 2;
+    z-index: 50;
     border-bottom: 1px;
-    /* border:  */
 }
 
 .aboutBehavior {
     z-index: 1;
-    position: relative;
+}
+
+.skills {
+    z-index: 1;
 }
