--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -36,10 +36,11 @@ section {
 
 .coverpicture:hover {
     outline: 2.5px solid white;
+    transform: scale(1.01);
 }
 
 .hello {
-    border-bottom: 2px solid white;
+    border-bottom: 1px solid white;
     font-size: 1.2em;
     display: inline-block;
     position: relative;
