--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -11,9 +11,10 @@
     margin-top: 4em;
 }
 
-.techStack {
+.skillsHead {
     border-bottom: 1px solid white;
     display: inline-block;
+    font-size: 1.3rem;
 }
 
 .skills {
@@ -29,7 +30,7 @@
 .techs {
     box-sizing: border-box;
     border-radius: 1em;
-    border: 1px solid #c7d2fe;
+    border: .25px solid #c7d2fe;
     width: 7rem;
     height: 6rem;
     background-color: rgb(30 27 75);
@@ -38,13 +39,13 @@
     align-items: center;
     z-index: 1;
     font-weight: 700;
-    transition: .25s;
+    transition: all .25s ease-in-out;
 }
 
 .techs:hover {
-    transform: translateY(-5px) translateZ(0px);
     cursor: pointer;
     background-color: rgb(30 27 90);
+    transform: scale(1.05);
 }
 
 .techs>div {    
