--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -10,7 +10,6 @@
     font-size: 1.3rem;
 }
 
-
 .projectsList {
     display: grid;
     grid-template-rows: repeat(1, minmax(0, 1fr));
@@ -20,55 +19,10 @@
     gap: 1rem;
 }
 
-
-.project-box {
-    border: .25px solid #c7d2fe;
-    border-radius: 1em;
-
-    height: 37em;
-    margin: 0 8em 0 8em;
-    background-color: rgb(30 27 75);
-
-    min-width: 45em;
-    max-width: 45em;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    z-index: 1;
-    transition: all .2s ease-in-out;
-}
-
-.project-box:hover {
-    transform: scale(1.025);
-}
-
-.project-box img {
-    width: 40em;
-    border-radius: 1em;
-    display: block;
-    margin-bottom: 1rem;
-
-}
-.project-box span {
-    font-size: large;
-    border-bottom: 1px solid white;
-    font-weight: 700;
-    text-align: center;
-    line-height: 1.5em;
-    margin: 0 .5em 1em .5em;
-}
-.project-box p {
-    font-size: small;
-    text-align: center;
-    line-height: 1.5em;
-    margin: 1rem 1rem 2rem 1rem;
-}
-
 .project-stack {
     display: flex;
     gap: .5em;
+    z-index: 40;
 }
 
 .project-stack div {
@@ -79,5 +33,71 @@
     padding: .5rem .4rem .5rem .4rem;
     background-color: #c7d2fe;
     font-weight: 700;
-    background-color: rgb(49 46 129);
+    background-color: rgb(30 27 75);
+}
+
+.project-card {
+    margin: 0 8em 2em 8em;
+    position: relative;
+    object-fit: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    display: flex;
+    align-items: flex-end;
+    border-radius: 1rem;
+    break-inside: avoid;
+    max-width: 50rem;
+    background-image: linear-gradient(to bottom, transparent 50%, black 100%);
+    background-blend-mode: overlay;
+    background-size: cover;
+    transition: all 0.5s ease-in-out;
+}
+
+.project-card:hover::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom, transparent 40%, #0e1111 100%);
+    z-index: 1; 
+    border-radius: 1rem; 
+}
+
+.project-card img {
+    object-fit: cover;
+    vertical-align: middle;
+    width: 100% !important;
+    height: 100% !important;
+}
+
+.project-card:hover {
+    transform: scale(1.025);
+    content-visibility: visible;
+}
+.project-card:hover .content-slate {
+    visibility: visible;
+    opacity: 1;
+}
+
+.content-slate {
+    z-index: 1;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 1rem 3rem;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+.content-slate a {
+    font-size: x-large;
+    font-weight: 700;
+    border-bottom: 1px solid white;
+    width: fit-content;
+}
+
+.content-slate p {
+    font-size: small;
 }
