--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,12 @@
 body {
-    margin: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
     background-image: linear-gradient(to bottom, #1e1b4b 0%, #312e81 50%, #1e1b4b 100%);
+    max-width: fit-content;
+    padding: 0;
 }
 
 .secondBackground {
