--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -181,7 +181,7 @@
     padding: 2rem;
     bottom: 20px;
     left: 0;
-    bottom: 20px; /* Adjust this value as needed */
+    bottom: 20px;
     width: 100%;
     text-align: center;
     color: white;
