--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,6 @@
 body {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vw;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
@@ -10,14 +10,16 @@ body {
 }
 
 .secondBackground {
-    background-image: linear-gradient(to bottom right, #030712 1%, transparent 100%);
+    background-image: linear-gradient(to bottom, #030712 1%, transparent 70%, #030712 100%);
+    width: 100vw;
+    height: 100%;
+    margin: 0px;
     z-index: -1;
 }
 
 .navBehavior {
     position: sticky;
     top: 0px;
-    backdrop-filter: blur(16px);
     z-index: 50;
     border-bottom: 1px;
 }
@@ -33,3 +35,5 @@ body {
 .projectBehavior {
     z-index: 1;
 }
+
+
