--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,39 +1,47 @@
 body {
-    width: 100vw;
-    height: 100vw;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
-    background-image: linear-gradient(to bottom, #1e1b4b 0%, #312e81 50%, #1e1b4b 100%);
-    max-width: fit-content;
-    padding: 0;
+  width: 100vw;
+  height: 100vw;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+  background-image: linear-gradient(
+    to bottom,
+    #1e1b4b 0%,
+    #312e81 50%,
+    #1e1b4b 100%
+  );
+  max-width: fit-content;
+  padding: 0;
 }
 
 .secondBackground {
-    background-image: linear-gradient(to bottom, #030712 1%, transparent 70%, #030712 100%);
-    width: 100vw;
-    height: 100%;
-    margin: 0px;
-    z-index: -1;
+  background-image: linear-gradient(
+    to bottom,
+    #030712 1%,
+    transparent 70%,
+    #030712 100%
+  );
+  width: 100vw;
+  height: 100%;
+  margin: 0px;
+  z-index: -1;
 }
 
 .navBehavior {
-    position: sticky;
-    top: 0px;
-    z-index: 50;
-    border-bottom: 1px;
+  position: sticky;
+  top: 0px;
+  z-index: 50;
+  border-bottom: 1px;
 }
 
 .aboutBehavior {
-    z-index: 1;
+  z-index: 1;
 }
 
 .skillsBehavior {
-    z-index: 1;
+  z-index: 1;
 }
 
 .projectBehavior {
-    z-index: 1;
+  z-index: 1;
 }
-
-
