--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -1,96 +1,91 @@
 .skillsContainer {
-    font-family: sans-serif;
-    color: white;
-    height: fit-content;
+  font-family: sans-serif;
+  color: white;
+  height: fit-content;
 }
 
 .title {
-    display: flex;
-    justify-content: center;
-    padding: .5em;
-    margin-top: 4em;
+  display: flex;
+  justify-content: center;
+  padding: 0.5em;
+  margin-top: 4em;
 }
 
 .skillsHead {
-    border-bottom: 1px solid white;
-    display: inline-block;
-    font-size: 1.3rem;
+  border-bottom: 1px solid white;
+  display: inline-block;
+  font-size: 1.3rem;
 }
 
 .skills {
-    display: grid;
-    grid-template-columns: repeat(5, minmax(0, 1fr));
-    width: 50%;
-    gap: 1em;
-    row-gap: 1em;
-    margin: 0 auto 0 auto;
-    justify-items: center;
-    border: .25px solid #c7d2fe;
-    padding: 2em;
-    border-radius: 1em; 
+  display: grid;
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+  width: 50%;
+  gap: 1em;
+  row-gap: 1em;
+  margin: 0 auto 0 auto;
+  justify-items: center;
+  border: 0.25px solid #c7d2fe;
+  padding: 2em;
+  border-radius: 1em;
 }
 
 .techs {
-    box-sizing: border-box;
-    border-radius: 1em;
-    width: 7rem;
-    height: 6rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-    font-weight: 700;
-    transition: all .25s ease-in-out;
+  box-sizing: border-box;
+  border-radius: 1em;
+  width: 7rem;
+  height: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  font-weight: 700;
+  transition: all 0.25s ease-in-out;
 }
 
-.techs:hover, .techs:active {
-    cursor: pointer;
-    background-color: rgb(30 27 90);
-    transform: scale(1.05);
+.techs:hover,
+.techs:active {
+  cursor: pointer;
+  background-color: rgb(30 27 90);
+  transform: scale(1.05);
 }
 
-.techs>div {    
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    font-size: small;
+.techs > div {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: small;
 }
 
 .logo {
-    height: 2.5rem;
-    padding: 1em;
+  height: 2.5rem;
+  padding: 1em;
 }
 
 @media (max-width: 850px) {
-
-    .techs:hover {
-        background-color: initial;
-    }
-
+  .techs:hover {
+    background-color: initial;
+  }
 }
 
 @media (max-width: 650px) {
-
-    .skills {
-        display: grid;
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-        border: 0;
-    }
-    .techs:hover {
-        background-color: initial;
-    }
-
+  .skills {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    border: 0;
+  }
+  .techs:hover {
+    background-color: initial;
+  }
 }
 
 @media (max-width: 300px) {
+  .skills {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 
-    .skills {
-        display: grid;
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
-
-    .techs:hover {
-        background-color: initial;
-    }
-
+  .techs:hover {
+    background-color: initial;
+  }
 }
