--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -7,10 +7,10 @@ a:visited {
 .bar {
   color: white;
   padding-bottom: 0.75rem;
-  border-bottom: 1px solid white;
+  border-bottom: 0.5px solid white;
   background-color: transparent;
   font-family: sans-serif;
-  backdrop-filter: blur(24px);
+  backdrop-filter: blur(5px);
   top: 0px;
   margin: 0;
 }
@@ -111,15 +111,13 @@ a:visited {
   .rightGrid {
     display: none;
     flex-direction: column;
-    backdrop-filter: contrast(100%);
-    background-color: rgb(48, 43, 115);
-    border-bottom: 0.5px solid white;
+    border-bottom: 1px solid white;
     padding: 1rem 1rem 1rem 0;
     position: absolute;
     top: 100%;
     left: 0;
     right: 0;
-    z-index: 999;
+    z-index: 100;
   }
 
   .socials {
@@ -138,6 +136,7 @@ a:visited {
   }
 
   .rightGrid.open {
+    background-color: rgba(0, 0, 0, 0.6);
     display: flex;
   }
 }
