--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -27,6 +27,13 @@ body {
   height: 100%;
 }
 
+.title {
+  display: flex;
+  justify-content: center;
+  margin-top: 2.5em;
+  font-size: 1.3rem;
+}
+
 .secondBackground {
   background-image: linear-gradient(
     to bottom,
