--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -1,28 +1,16 @@
 .skillsContainer {
-  font-family: sans-serif;
+  font-family: sans-serif; /* If needed globally */
   color: white;
-  height: fit-content;
-}
-
-.title {
-  display: flex;
-  justify-content: center;
-  margin-top: 2.5em;
-}
-
-.skillsHead {
-  border-bottom: 1px solid white;
-  display: inline-block;
-  font-size: 1.3rem;
 }
 
 .skills {
   display: grid;
   grid-template-columns: repeat(5, minmax(0, 1fr));
-  width: 50%;
+  width: 100%;
+  max-width: 800px;
   gap: 1em;
   row-gap: 1em;
-  margin: 0 auto 0 auto;
+  margin: 0 auto;
   justify-items: center;
   border: 0.25px solid #c7d2fe;
   padding: 2em;
@@ -30,61 +18,68 @@
 }
 
 .techs {
-  box-sizing: border-box;
-  border-radius: 1em;
-  width: 7rem;
-  height: 6rem;
+  padding: 1rem;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   z-index: 1;
-  font-weight: 700;
+  font-size: 1rem;
   transition: all 0.25s ease-in-out;
 }
 
 .techs:hover,
 .techs:active {
   cursor: pointer;
-  background-color: rgb(30 27 90);
   transform: scale(1.05);
-}
-
-.techs > div {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  font-size: small;
 }
 
 .logo {
   height: 2.5rem;
-  padding: 1em;
+  padding: 1rem;
 }
 
 @media (max-width: 850px) {
+  .skills {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    padding: 1.5em;
+  }
+
   .techs:hover {
     background-color: initial;
+    transform: none;
+    box-shadow: none;
   }
 }
 
 @media (max-width: 650px) {
   .skills {
-    display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
     border: 0;
+    gap: 0.8em;
+    padding: 1em;
   }
-  .techs:hover {
-    background-color: initial;
+
+  .techs {
+    font-size: 0.9rem;
+  }
+
+  .logo {
+    height: 2rem;
   }
 }
 
 @media (max-width: 300px) {
   .skills {
-    display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
+    border: 0;
   }
 
-  .techs:hover {
-    background-color: initial;
+  .techs {
+    font-size: 0.8rem;
+  }
+
+  .logo {
+    height: 2rem;
+    padding: 0.5em;
   }
 }
