--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,7 @@
+* {
+  font-family: sans-serif;
+}
+
 body {
   width: 100vw;
   height: 100vw;
@@ -32,6 +36,17 @@ body {
   justify-content: center;
   margin-top: 2.5em;
   font-size: 1.3rem;
+}
+
+.container {
+  font-family: sans-serif; /* If needed globally */
+  color: white;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
 }
 
 .secondBackground {
