--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,39 +1,55 @@
-.contactContainer {
-  z-index: 1;
-  height: fit-content;
-}
-
-.contactHead {
-  border-bottom: 1px solid white;
-  display: inline-block;
-  font-size: 1.3rem;
-  color: white;
-  font-family: sans-serif;
-}
-
 .contactGrid {
-  height: fit-content;
-  margin: 0 20em 2em 20em;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   gap: 5em;
-  justify-content: center;
+  width: 50vw;
+  margin-bottom: 5em;
 }
 
 .contact-card {
-  height: fit-content;
+  display: flex;
+  flex-direction: column;
   width: 30em;
   border: 0.1px solid white;
   background-color: rgb(13, 11, 37);
-  z-index: 1;
   border-radius: 1em;
+  z-index: 1;
+}
+
+.prompt {
   display: flex;
   flex-direction: column;
-  margin-bottom: 4em;
+  text-align: left;
+  margin: 1em;
+}
+
+.prompt textarea {
+  padding: 10px 0 10px 0;
+  min-height: 6em;
+  max-height: 20em;
+}
+
+.field {
+  display: flex;
+  background-color: rgb(34, 30, 88);
+  border: 1px solid gray;
+  border-radius: 0.5em;
+  margin-top: 1em;
+  min-height: 2em;
+  color: white;
+  font-size: 15px;
+  text-align: left;
+  text-indent: 10px;
+  transition: all 0.15s ease-in-out;
+  resize: vertical;
+}
+
+.field:hover {
+  border: 0.5px solid white;
 }
 
 .send {
-  margin: 1.5em auto;
+  margin: 1em auto;
   width: 5rem;
   color: white;
   font-weight: 700;
@@ -42,7 +58,6 @@
   border: 1px solid white;
   padding: 0.7em;
   text-align: center;
-  justify-content: center;
   transition: all 0.25s ease-in-out;
 }
 
@@ -51,105 +66,58 @@
   background-color: rgb(30 27 90);
 }
 
-.prompt {
-  color: white;
-  font-family: sans-serif;
-  text-align: left;
-  display: flex;
-  flex-direction: column;
-  margin: 1em;
-}
-
-.field {
-  background-color: rgb(34, 30, 88);
-  border: 0.5px solid gray;
-  border-radius: 0.5em;
-  margin-top: 1em;
-  min-height: 2em;
-  color: white;
-  text-align: left;
-  text-indent: 10px;
-  display: flex;
-  font-size: 15px;
-  transition: all 0.15s ease-in-out;
-}
-
-.field:hover {
-  border: 0.5px solid white;
-}
-
-.message-field {
-  background-color: rgb(34, 30, 88);
-  border: 0.25px solid gray;
-  border-radius: 0.5em;
-  margin-top: 1em;
-  min-height: 6em;
-  max-height: 20em;
-  color: white;
-  display: flex;
-  text-align: left;
-  padding: 10px;
-  font-size: 15px;
-  justify-content: center;
-  resize: vertical;
-  overflow-wrap: break-word;
-  font-family: sans-serif;
-  transition: border 0.15s ease-in-out;
-}
-
-.message-field:hover {
-  border: 0.5px solid white;
-}
-
 .information-container {
   color: white;
-  font-family: sans-serif;
-  display: grid;
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+  display: flex;
+  flex-direction: column;
   gap: 1.5em;
 }
 
 .contact-type {
-  display: flex;
-  font-size: 28px;
-  font-weight: 700;
-  align-items: center;
-  justify-content: center;
-
   background-color: rgb(34, 30, 88);
+  display: flex;
+  flex-direction: column;
+
   border: 0.5px solid white;
+  border-radius: 1em;
+
+  padding: 1em;
+  gap: 1em;
+  font-size: medium;
+  align-items: center;
   transition: all 0.25s ease-in-out;
-  border-radius: 9999px;
-  height: auto;
-  width: auto;
   z-index: 1;
-  padding: 10px;
+  color: white;
 }
 
 .contact-type:hover {
-  transform: scale(1.1);
-  color: rgb(199 210 254);
+  transform: scale(1.025);
   cursor: pointer;
 }
 
-.information {
-  text-overflow: clip;
-  width: fit-content;
-  white-space: nowrap;
-  display: flex;
-  align-items: center;
-  gap: 0.7em;
-  font-size: 16px;
-  text-overflow: wrap;
+.icon {
+  font-size: 2rem;
 }
 
 .information-socials {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   gap: 2em;
   border-top: 1px solid white;
   padding-top: 1em;
-  width: fit-content;
+  width: 100%;
+}
+
+.footer-socials {
+  display: flex;
+  font-size: 2rem;
+  gap: 2em;
+  transition: all 0.25s ease-in-out;
+}
+
+.footer-socials:hover {
+  color: rgb(199 210 254);
+  transform: scale(1.1);
 }
 
 .footer {
