--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -1,30 +1,61 @@
-.skillsContainer {
-  font-family: sans-serif; /* If needed globally */
+.filters {
+  display: flex;
+  justify-content: center;
+
+  gap: 1em;
+  margin-bottom: 1em;
+}
+
+.filter-btn {
+  width: 100px;
+  height: 50px;
+  background-color: rgb(13, 11, 37);
   color: white;
+  border: 1px solid #ccc;
+  border-radius: 1em;
+  cursor: pointer;
+  z-index: 1;
+  transition: all 0.5s ease;
+}
+
+.filter-btn.active {
+  background-color: #0e1111;
+}
+
+.filter-btn:hover {
+  transform: scale(1.05);
 }
 
 .skills {
+  width: 50vw;
+  padding: 2em 0 2em 0;
+  margin: 0;
+
   display: grid;
   grid-template-columns: repeat(5, minmax(0, 1fr));
-  width: 100%;
-  max-width: 800px;
-  gap: 1em;
-  row-gap: 1em;
-  margin: 0 auto;
   justify-items: center;
-  border: 0.25px solid #c7d2fe;
-  padding: 2em;
+  gap: 1em;
+
+  border: 1px solid #c7d2fe;
   border-radius: 1em;
 }
 
 .techs {
-  padding: 1rem;
+  width: 80px;
+  height: 80px;
+
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   z-index: 1;
-  font-size: 1rem;
+
+  font-size: small;
   transition: all 0.25s ease-in-out;
+  gap: 0.5em;
+
+  border: 1px solid white;
+  border-radius: 1em;
 }
 
 .techs:hover,
@@ -35,51 +66,60 @@
 
 .logo {
   height: 2.5rem;
-  padding: 1rem;
+}
+
+@media (hover: none) {
+  .techs:hover,
+  .techs:active {
+    background-color: initial;
+    cursor: default;
+    box-shadow: none;
+    transform: none;
+  }
+}
+
+@media (max-width: 950px) {
+  .skills {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    padding: 1em;
+  }
 }
 
 @media (max-width: 850px) {
   .skills {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-    padding: 1.5em;
-  }
-
-  .techs:hover {
-    background-color: initial;
-    transform: none;
-    box-shadow: none;
-  }
-}
-
-@media (max-width: 650px) {
-  .skills {
     grid-template-columns: repeat(3, minmax(0, 1fr));
     border: 0;
-    gap: 0.8em;
-    padding: 1em;
+    gap: 0.2em;
   }
 
   .techs {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
+    padding: 0.5em;
+  }
+}
+
+@media (max-width: 600px) {
+  .filters {
+    display: none;
+  }
+
+  .skills {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .logo {
     height: 2rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .techs {
+    border: 0;
   }
 }
 
 @media (max-width: 300px) {
   .skills {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-    border: 0;
-  }
-
-  .techs {
-    font-size: 0.8rem;
-  }
-
-  .logo {
-    height: 2rem;
-    padding: 0.5em;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
