--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,43 +3,45 @@
 }
 
 body {
-  width: 100vw;
-  height: 100vw;
+  width: 100%;
+  height: 100%;
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
-  background-image: linear-gradient(
-    to top,
-    hsl(246, 100%, 7.84%) 0%,
-    hsl(245.62, 98.86%, 7.88%) 8.1%,
-    hsl(244.52, 95.7%, 7.98%) 15.5%,
-    hsl(242.72, 90.97%, 8.13%) 22.5%,
-    hsl(240.23, 85.13%, 8.32%) 29%,
-    hsl(237.16, 85.87%, 8.22%) 35.3%,
-    hsl(233.76, 87.41%, 8.08%) 41.2%,
-    hsl(230.16, 89.11%, 7.92%) 47.1%,
-    hsl(226.5, 90.91%, 7.76%) 52.9%,
-    hsl(222.91, 92.75%, 7.61%) 58.8%,
-    hsl(219.51, 94.55%, 7.47%) 64.7%,
-    hsl(216.43, 96.25%, 7.33%) 71%,
-    hsl(213.81, 97.74%, 7.22%) 77.5%,
-    hsl(211.78, 98.93%, 7.14%) 84.5%,
-    hsl(210.47, 99.72%, 7.08%) 91.9%,
-    hsl(210, 100%, 7.06%) 100%
-  );
+  background: linear-gradient(-45deg, #122c34, #122c34, #224870, #122c34);
+  background-size: 400% 400%;
   padding: 0;
-  height: 100%;
+  animation: gradient 15s ease-in-out infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
+  color: white;
 }
 
 .title {
   display: flex;
   justify-content: center;
   margin-top: 2.5em;
-  font-size: 1.3rem;
+  font-size: x-large;
+  border-bottom: 1px solid white;
 }
 
 .container {
-  font-family: sans-serif; /* If needed globally */
+  font-family: sans-serif;
   color: white;
 
   display: flex;
@@ -49,34 +51,8 @@ body {
   overflow-x: hidden;
 }
 
-.secondBackground {
-  background-image: linear-gradient(
-    to bottom,
-    #030712 1%,
-    transparent 65%,
-    #030712 100%
-  );
-  width: 100vw;
-  height: 100%;
-  margin: 0px;
-  z-index: -1;
-}
-
 .navBehavior {
   position: sticky;
   top: 0px;
   z-index: 50;
-  border-bottom: 1px;
-}
-
-.aboutBehavior {
-  z-index: 1;
-}
-
-.skillsBehavior {
-  z-index: 1;
-}
-
-.projectBehavior {
-  z-index: 1;
 }
