--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -3,7 +3,8 @@
   align-items: flex-end;
   gap: 5em;
   width: 50vw;
-  margin-bottom: 5em;
+  margin-bottom: 10em;
+  justify-content: space-around;
 }
 
 .contact-card {
@@ -11,7 +12,7 @@
   flex-direction: column;
   width: 30em;
   border: 0.1px solid white;
-  background-color: rgb(13, 11, 37);
+  background-color: rgba(0, 0, 0, 0.2);
   border-radius: 1em;
   z-index: 1;
 }
@@ -31,7 +32,7 @@
 
 .field {
   display: flex;
-  background-color: rgb(34, 30, 88);
+  background-color: rgba(0, 0, 0, 0.1);
   border: 1px solid gray;
   border-radius: 0.5em;
   margin-top: 1em;
@@ -46,6 +47,7 @@
 
 .field:hover {
   border: 0.5px solid white;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .send {
@@ -53,7 +55,7 @@
   width: 5rem;
   color: white;
   font-weight: 700;
-  background-color: rgb(13, 11, 37);
+  background-color: rgba(0, 0, 0, 0.1);
   border-radius: 1em;
   border: 1px solid white;
   padding: 0.7em;
@@ -63,7 +65,7 @@
 
 .send:hover {
   cursor: pointer;
-  background-color: rgb(30 27 90);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .information-container {
@@ -74,7 +76,7 @@
 }
 
 .contact-type {
-  background-color: rgb(34, 30, 88);
+  background-color: rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
 
@@ -93,6 +95,7 @@
 .contact-type:hover {
   transform: scale(1.025);
   cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .icon {
@@ -104,7 +107,8 @@
   justify-content: center;
   gap: 2em;
   border-top: 1px solid white;
-  padding-top: 1em;
+  border-bottom: 1px solid white;
+  padding: 1em 0 1em 0;
   width: 100%;
 }
 
@@ -116,21 +120,20 @@
 }
 
 .footer-socials:hover {
-  color: rgb(199 210 254);
   transform: scale(1.1);
 }
 
 .footer {
-  border-top: 0.5px solid white;
+  border-top: 1px solid white;
   padding: 2rem 0 2rem 0;
   left: 0;
 
   width: 100%;
   color: white;
-  font-size: x-small;
+  font-size: 12px;
   font-family: sans-serif;
   text-align: left;
-  text-indent: 5rem;
+  text-indent: 10rem;
   z-index: 1;
 }
 
