--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -9,17 +9,20 @@
 .filter-btn {
   width: 100px;
   height: 50px;
-  background-color: rgb(13, 11, 37);
+  background-color: transparent;
   color: white;
+  font-size: medium;
+  font-weight: 300;
   border: 1px solid #ccc;
   border-radius: 1em;
   cursor: pointer;
   z-index: 1;
-  transition: all 0.5s ease;
+  transition: all 0.3s ease-in-out;
 }
 
 .filter-btn.active {
-  background-color: #0e1111;
+  transform: translateY(-10px);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .filter-btn:hover {
@@ -28,21 +31,18 @@
 
 .skills {
   width: 50vw;
-  padding: 2em 0 2em 0;
-  margin: 0;
+  padding: 0;
 
   display: grid;
   grid-template-columns: repeat(5, minmax(0, 1fr));
   justify-items: center;
-  gap: 1em;
-
-  border: 1px solid #c7d2fe;
+  row-gap: 1.5em;
   border-radius: 1em;
 }
 
 .techs {
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
 
   display: flex;
   flex-direction: column;
@@ -50,12 +50,12 @@
   justify-content: center;
   z-index: 1;
 
-  font-size: small;
+  font-size: smaller;
   transition: all 0.25s ease-in-out;
-  gap: 0.5em;
+  gap: 15px;
 
-  border: 1px solid white;
-  border-radius: 1em;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 0.5em;
 }
 
 .techs:hover,
