--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -12,10 +12,12 @@ section {
 
 .aboutContainer {
   display: flex;
-  gap: 10rem;
-  margin-top: 6rem;
+  gap: 8rem;
+  margin: 8rem 0 16rem 0;
   z-index: 1;
   align-items: center;
+  justify-content: center;
+  max-width: fit-content;
 }
 
 .bioContainer {
@@ -24,8 +26,8 @@ section {
 }
 
 .coverpicture {
-  width: 22.5rem;
-  height: 22.5rem;
+  width: 27.5rem;
+  height: 27.5rem;
   border-radius: 9999px;
   outline: 1px solid white;
   font-weight: 700;
@@ -61,7 +63,7 @@ section {
   line-height: 1.5rem;
 }
 
-@media (max-width: 850px) {
+@media (max-width: 900px) {
   .aboutContainer {
     flex-direction: column;
     align-items: center;
@@ -94,5 +96,12 @@ section {
   .shortbio {
     margin: 1.5rem;
     text-align: center;
+  }
+}
+
+@media (max-width: 500px) {
+  .aboutContainer img {
+    width: 18rem;
+    height: 18rem;
   }
 }
