--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -7,7 +7,7 @@
 }
 
 .project-card {
-  width: 50vw;
+  width: 45vw;
   display: flex;
   align-items: flex-end;
   border-radius: 1em;
@@ -72,9 +72,9 @@
   font-size: 12px;
   text-align: center;
   border-radius: 0.8em;
-  padding: 0.5rem;
-  background-color: rgba(0, 0, 0, 0.2);
-  border: 1px solid white;
+  padding: 0.2rem 0.4rem;
+  background-color: #11263f;
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 @media (max-width: 1000px) {
