--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -12,9 +12,9 @@
   background-color: transparent;
   color: white;
   font-size: medium;
-  font-weight: 300;
-  border: 1px solid #ccc;
-  border-radius: 1em;
+  font-weight: 400;
+  border: 0;
+  border-radius: 0.5em;
   cursor: pointer;
   z-index: 1;
   transition: all 0.3s ease-in-out;
@@ -22,7 +22,7 @@
 
 .filter-btn.active {
   transform: translateY(-10px);
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .filter-btn:hover {
@@ -30,19 +30,19 @@
 }
 
 .skills {
-  width: 50vw;
+  width: 45vw;
   padding: 0;
 
   display: grid;
   grid-template-columns: repeat(5, minmax(0, 1fr));
   justify-items: center;
-  row-gap: 1.5em;
+  row-gap: 0.5em;
   border-radius: 1em;
 }
 
 .techs {
-  width: 100px;
-  height: 100px;
+  width: 8rem;
+  height: 7rem;
 
   display: flex;
   flex-direction: column;
@@ -50,11 +50,12 @@
   justify-content: center;
   z-index: 1;
 
-  font-size: smaller;
+  font-size: 15px;
+  font-weight: 400;
   transition: all 0.25s ease-in-out;
-  gap: 15px;
+  gap: 0.5rem;
 
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.1);
   border-radius: 0.5em;
 }
 
@@ -65,7 +66,7 @@
 }
 
 .logo {
-  height: 2.5rem;
+  height: 3.5rem;
 }
 
 @media (hover: none) {
@@ -78,48 +79,81 @@
   }
 }
 
-@media (max-width: 950px) {
-  .skills {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-    padding: 1em;
+@media (max-width: 1500px) {
+  .techs {
+    width: 6rem;
+    height: 6rem;
+  }
+  .logo {
+    height: 2.5rem;
   }
 }
 
-@media (max-width: 850px) {
+@media (max-width: 1100px) {
   .skills {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
+
+@media (max-width: 900px) {
+  .skills {
     border: 0;
     gap: 0.2em;
   }
 
+  .filter-btn {
+    width: 80px;
+    height: 40px;
+    font-size: 13px;
+  }
+
   .techs {
-    font-size: 0.8rem;
-    padding: 0.5em;
+    width: 5rem;
+    height: 5rem;
+    font-size: 0.75rem;
   }
-}
-
-@media (max-width: 600px) {
-  .filters {
-    display: none;
-  }
-
-  .skills {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .logo {
     height: 2rem;
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 750px) {
+  .skills {
+    width: 50vw;
+  }
+  .filter-btn {
+    width: 70px;
+    height: 35px;
+    font-size: 12px;
+  }
   .techs {
-    border: 0;
+    width: 4.3rem;
+    height: 4.3rem;
   }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 600px) {
   .skills {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .filters {
+    display: none;
+  }
+}
+
+@media (max-width: 450px) {
+  .techs {
+    width: 3.8rem;
+    height: 3.8rem;
+    font-size: 0.6rem;
+  }
+  .logo {
+    height: 1.8rem;
+  }
+}
+
+@media (max-width: 375px) {
+  .skills {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
