--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -69,6 +69,7 @@ section {
     align-items: center;
     justify-content: center;
     gap: 0;
+    margin-bottom: 0;
   }
 
   .aboutContainer img {
